Line 32 run in deploy

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.2),
     golem (>= 0.4.1),
+    pkgload,
     shiny (>= 1.7.5.1)
 Encoding: UTF-8
 LazyData: true
