--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Title: An Amazing Shiny App
 Version: 0.0.0.9000
 Authors@R: 
   c(person(given = "Chuang",
-           family = "lastname",
+           family = "Hembo",
            role = c("aut", "cre"), # There must be a "cre", but there can only be one
-           email = "your@email.com"), 
+           email = "s233427"), 
     person(given = "Subhayan",
            family = "lastname",
            role = "aut",
