--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.2),
+    ggplot2,
     golem (>= 0.4.1),
     Group.5.Dogma,
     shiny (>= 1.7.5.1)
