--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,10 @@ Authors@R: c(
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Imports: 
+    BioSeqR,
     config (>= 0.3.2),
     ggplot2,
     golem (>= 0.4.1),
-    Group.5.Dogma,
     shiny (>= 1.7.5.1)
 Encoding: UTF-8
 LazyData: true
