--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,7 @@ importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
+importFrom(shiny,tagAppendAttributes)
 importFrom(shiny,tagList)
+importFrom(shiny,uiOutput)
+importFrom(shiny,verbatimTextOutput)
